welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:1: error: ')' expected but '}' found.
def in1020(a:Int, b:Int):Boolean = {return (((10<a)&&(a<20))||((10<b)&&(b<20))}
                                                                              ^